# sgraf812.github.io

./: .gitignore  .gitmodules  CNAME  README.md  about.html  about.md  atom.xml  blog.cabal  flake.nix  index.html  site.hs  stack.yaml  upload.sh
.circleci/: config.yml
assets/css/: custom.css  haddock.css  iconicss.min.css  lanyon.css  main.css  noscript.css  poole.css  pygments.css  zenburn.css
assets/icon/: browserconfig.xml  manifest.json
assets/sass/: main.scss
assets/sass/base/: _typography.scss
assets/sass/libs/: _vars.scss
blog/: 2017-12-03-hakyll-highlighting-themes.html  2017-12-03-hakyll-highlighting-themes.md  2017-12-04-strictness-analysis-part-1.html  2017-12-04-strictness-analysis-part-1.md  2018-04-xx-strictness-analysis-part-2.lhs  2018-11-01-strictness-analysis-part-2.md  2018-12-30-strictness-analysis-part-2.html  2024-09-23-total-denotational-semantics.hs  2024-09-23-total-denotational-semantics.html  2024-09-23-total-denotational-semantics.md  2025-06-08-partially-well-founded-definitions.html  2025-06-08-partially-well-founded-definitions.md  2026-06-18-prop-at-the-top.html  2026-06-18-prop-at-the-top.md
templates/: default.html  post.html
tests/StrAnal/: Main.hs  Strictness.lhs
