name:                blog
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sgraf812/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
copyright:           Copyright: (c) 2017 Sebastian Graf
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       hakyll-sass

